--- a/survey/core/templates/core/project_dashboard.html
+++ b/survey/core/templates/core/project_dashboard.html
@@ -324,13 +324,10 @@
                             <div class="widget-body">
                                 <ul class="user-list-sm">
                                     <li>
-                                        <a href="{% url 'core:material_list' project.pk %}">More About Materials</a>
+                                        <a href="{% url 'core:category_list' project.pk %}">More About Materials</a>
                                     </li>
                                     <li>
                                         <a href="{% url 'core:build_house' %}">Build A House</a>
-                                    </li>
-                                    <li>
-                                        <a href="{% url 'core:category_list' project.pk %}">Category</a>
                                     </li>
                                 </ul>
                             </div>
