--- a/survey/core/templates/core/material_list.html
+++ b/survey/core/templates/core/material_list.html
@@ -113,7 +113,7 @@ tbody td, thead th {
                                 <!--{% endfor %}<br></tr>-->
                                 <!--</tbody>-->
                                 <!--</table><br>-->
-                                <!--<strong><a href="{% url 'core:material_create' project.pk %}">Create-->
+                                <!--<strong><a href="#">Create-->
                                     <!--New</a></strong>-->
                             <!--</div>-->
                         <!--</div>-->
@@ -122,7 +122,7 @@ tbody td, thead th {
             <!--</div>-->
         <!--</div>-->
         <div class="d-flex justify-content-center">
-            <div class="col-md-2 col-lg-9"><a href="{% url 'core:material_create' project.pk %}" title=""
+            <div class="col-md-2 col-lg-9"><a href="#" title=""
                                               class="btn btn-sm btn-xs btn-primary"><i
                     class="la la-plus"></i>Add New Material</a>
                 <div class="dash-right">
