--- a/survey/core/templates/core/material_detail.html
+++ b/survey/core/templates/core/material_detail.html
@@ -31,30 +31,58 @@
                             <a href="{% url 'core:material_update' object.id %}" title=""
                                class="btn btn-sm btn-xs btn-primary"><i class="la la-edit"></i>Edit &nbsp</a>
                         </div>
-                        <div class="widget-body">
-                            {% if object.title %}
-                                <h5>Name</h5><br>
-                                {{ object.title }}
-                                </p><br>{% endif %}{% if object.organization %}
-                            <p>
-                            <h5>Organization</h5><br>
-                            <p>
-                                {{ object.organization }}
-                            </p><br>{% endif %}{% if object.good_photo %}
-                            <h5>Good Photo</h5><br>
-                            <p>
-                                <img src="{{ MEDIA_URL }}{{ object.good_photo }}">
-                            </p><br>{% endif %}{% if object.bad_photo %}
-                            <h5>Bad Photo</h5><br>
-                            <p>
-                                <img src="{{ MEDIA_URL }}{{ object.bad_photo }}">
-                            </p><br>{% endif %}{% if object.description %}
-                            <h5>Description</h5><br>
-                            <p>
-                                {{ object.description }}
-                            </p><br>
-                        {% endif %}
-                        </div>
+                        <!--<div class="widget-body">-->
+                            <!--{% if object.title %}-->
+                                <!--<h5>Name</h5><br>-->
+                                <!--{{ object.title }}-->
+                                <!--</p><br>{% endif %}{% if object.organization %}-->
+                            <!--<p>-->
+                            <!--<h5>Organization</h5><br>-->
+                            <!--<p>-->
+                                <!--{{ object.organization }}-->
+                            <!--</p><br>{% endif %}{% if object.good_photo %}-->
+                            <!--<h5>Good Photo</h5><br>-->
+                            <!--<p>-->
+                                <!--<img src="{{ MEDIA_URL }}{{ object.good_photo }}">-->
+                            <!--</p><br>{% endif %}{% if object.bad_photo %}-->
+                            <!--<h5>Bad Photo</h5><br>-->
+                            <!--<p>-->
+                                <!--<img src="{{ MEDIA_URL }}{{ object.bad_photo }}">-->
+                            <!--</p><br>{% endif %}{% if object.description %}-->
+                            <!--<h5>Description</h5><br>-->
+                            <!--<p>-->
+                                <!--{{ object.description }}-->
+                            <!--</p><br>-->
+                        <!--{% endif %}-->
+                        <!--</div>-->
+                        <table class="display table table-bordered table-striped">
+                            <tbody>
+                                <tr>
+                                    <td>
+                                        {% if object.good_photo %}
+                                        <div id="photo">
+                                            <img src="{{ MEDIA_URL }}{{ object.good_photo }}" style="height: 80px;float: right;padding: 0px;margin-right: 111px;">
+                                        </div>
+                                        {% endif %}<br>
+                                        {% if object.bad_photo %}
+                                        <div id="photo">
+                                            <img src="{{ MEDIA_URL }}{{ object.bad_photo }}" style="height: 80px;float: right;padding: 0px;margin-right: 111px;">
+                                        </div>
+                                        {% endif %}<br>
+                                        {% if object.title %}
+                                            <div class="site_icon_float" style="">Name: {{ object.title }}</div><br>
+                                        {% endif %}
+                                        {% if object.organization %}
+                                            <div class="site_icon_float" style="">Organization: {{ object.organization }}</div><br>
+                                        {% endif %}
+                                        {% if object.description %}
+                                            <div class="site_icon_float" style="">Description: {{ object.description }}</div><br>
+                                        {% endif %}
+
+                                    </td>
+                                </tr>
+                            </tbody>
+                        </table>
                     </div>
                 </div>
             </div>
