--- a/survey/core/templates/core/sitereport_detail.html
+++ b/survey/core/templates/core/sitereport_detail.html
@@ -90,16 +90,16 @@
                         </tr>
                     </tbody>
                 </table>
-                <!-- <div>
-                    {% if object.report_feedback %}
-                        {{ object.report_feedback }}
+                <div>
+                    {% if object.feedback %}
+                        {{ object.feedback.feedback }}
                     {% else %}
                         <form name="feedback" method="POST">{% csrf_token %}
                             <input name='feedback_text' id='feedback' placeholder="Enter Your Feedback">
                             <button name="feedback_submit" id="feedback" value="feedback" type="submit" class="btn btn-xs btn-primary">Send</button>
                         </form>
                     {% endif %}
-                </div> -->
+                </div>
             </div>
         </div>
     </div>
