--- a/survey/core/templates/core/picture_list.html
+++ b/survey/core/templates/core/picture_list.html
@@ -3,6 +3,12 @@
 {% load static %}
 {% load render_bundle from webpack_loader %}
 {% load get_files from webpack_loader %}
+{% block extra_css %}
+<style>.widget-info .widget-body {
+    max-height: 300px;
+    overflow-y: scroll;
+</style>
+{% endblock %}
 
 
 {% block content %}
@@ -26,32 +32,25 @@
                     <div class="col-md-12">
                         <div class="dash-right">
                             <div class="widget-info margin-top-large">
+                                <div class="widget-body no-padding-top" data-mh="sd-widget">
+                                    <div class="row">
+                                        {% for picture in site_pictures %}
+                                        {% if picture.0 %}
 
-                        <div class="widget-body no-padding-top" data-mh="sd-widget">
-                            <div class="row">
-                                {% for picture in site_pictures %}
-                                {% if picture.0 %}
-
-                                <div class="col-md-4">
-                                    <div class="photo-holder photo-item margin-top">
-                                        <img src="{{ MEDIA_URL }}{{ picture.0 }}" img-title="Hello" alt="">
-
+                                        <div class="col-md-4">
+                                            <div class="photo-holder photo-item margin-top">
+                                                <img src="{{ MEDIA_URL }}{{ picture.0 }}" img-title="Hello" alt="">
+                                            </div>
+                                        </div>
+                                        {% endif %}
+                                        {% empty %}
+                                        <p>No Pictures Found.</p>
+                                        {% endfor %}
                                     </div>
-
                                 </div>
-                                {% endif %}
-
-                                {% empty %}
-                                <p>No Pictures Found.</p>
-                                {% endfor %}
-
-
-                            </div>
-                        </div>
                             </div>
                         </div>
                     </div>
-
                 </div>
             </div>
         </div>
