--- a/survey/core/templates/core/site_detail.html
+++ b/survey/core/templates/core/site_detail.html
@@ -199,24 +199,7 @@
                         <div class="widget-body" data-mh="sd-widget">
                             <div class="update-wrap">
                                 <ul class="submission-list">
-                                    {% for report in site_reports %}
-                                    <li>
-                                        {% if report.photo %}
-                                        <img src="{{ MEDIA_URL }}{{ report.photo.url }}" alt="">
-
-                                        {% endif %}
-                                        <a title="View submission detail"
-                                           href="{% url 'core:site_report_detail' report.pk %}"><strong>{{report.comment|truncatechars:20 }}</strong></a>
-                                        <br>
-                                        <a href="#" title="View details of user">
-                                            <small><i class="la la-user"></i>{{ report.user }}</small>
-                                        </a>
-                                        <small class="site_icon_float" style=""><i class="la la-clock-o"
-                                                                                   aria-hidden="true"></i>{{ report.date}}
-                                        </small>
-                                    </li>
-                                    {% endfor %}
-                                    {% for report in site_substep_reports %}
+                                    {% for report in reports %}
                                     <li>
                                         {% if report.photo %}
                                         <img src="{{ MEDIA_URL }} {{ report.photo.url }}" alt="">
