--- a/survey/core/templates/core/substepreport_list.html
+++ b/survey/core/templates/core/substepreport_list.html
@@ -90,34 +90,7 @@
                             <div id="table-scroll">
                                 <table class="display table table-bordered table-striped">
                                     <tbody>
-                                        {% for report in site_reports %}
-                                        <tr>
-                                            <td>
-                                                <div>
-                                                    <a href="{% url 'core:substep_report_detail' report.pk %}" style="color:black;"><strong>{{ report.comment }}</strong></a>
-                                                </div>
-                                                 {% if report.photo %}
-                                                <div id="photo">
-                                                    <img src="{{report.photo.url}}" style="height: 80px;float: right;padding: 0px;margin-right: 111px;">
-                                                </div>
-                                                {% endif %}<br>
-                                                {% if report.comment %}
-                                                    <div class="site_icon_float" style="">Comment: {{ report.comment }}</div><br>
-                                                {% endif %}
-                                                {% if report.user %}
-                                                    <a href="#" title="View details of user">
-                                                        <small><i class="la la-user" style="color:grey;">Sent by: {{ report.user }}</i></small>
-                                                    </a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-                                                {% endif %}
-                                                {% if report.date %}
-                                                    <small><i class="site_icon_float" style="color:grey;"><i class="la la-clock-o"
-                                                                                                                     aria-hidden="true"></i>{{ report.date }}</i></small>
-                                                    <!--<label>Photo:</label>-->
-                                                {% endif %}&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-                                            </td>
-                                        </tr>
-                                        {% endfor %}
-                                        {% for report in site_substep_reports %}
+                                        {% for report in reports %}
                                         <tr>
                                             <td>
                                                 <div>
