removed hello from report photo fixes #8

--- a/survey/core/templates/core/substepreport_list.html
+++ b/survey/core/templates/core/substepreport_list.html
@@ -98,7 +98,7 @@
                                                 </div>
                                                  {% if report.photo %}
                                                 <div id="photo" class="photo-item">
-                                                    <img src="{{report.photo.url}}" style="height: 80px;float: right;padding: 0px;margin-right: 111px;" img-title="Hello">
+                                                    <img src="{{report.photo.url}}" style="height: 80px;float: right;padding: 0px;margin-right: 111px;">
                                                 </div>
                                                 {% endif %}<br>
                                                 {% if report.comment %}
