--- a/survey/core/templates/core/substepreport_list.html
+++ b/survey/core/templates/core/substepreport_list.html
@@ -85,6 +85,7 @@
                             <h4><a href="#" title="">Report List</a></h4>
                             <span class="tools pull-right"><a href="{% url 'core:export_report' %}"><button>Export Excel</button></a></span>
                             <span class="tools pull-right"><a href="{% url 'core:export_report_pdf' %}"><button>Export Pdf </button></a></span>
+                            <p style="text-align:center">Category: Progress update</p>
                         </div>
                         <div id="table-wrapper">
                             <div id="table-scroll">
@@ -125,6 +126,120 @@
                 </div>
             </div>
        </div>
+
+
+
+
+
+       <div class="formHolder">
+            <div class="widget-info margin-top-large">
+                <div class="widget-head">
+                    <div class="widget-body mt-2 horizontalForm">
+                        <div class="widget-head">
+                            <h4><a href="#" title="">Report List 1</a></h4>
+                            <span class="tools pull-right"><a href="{% url 'core:export_report' %}"><button>Export Excel</button></a></span>
+                            <span class="tools pull-right"><a href="{% url 'core:export_report_pdf' %}"><button>Export Pdf </button></a></span>
+                            <p style="text-align:center">Category: Issues/Concerns</p>
+                        </div>
+                        <div id="table-wrapper">
+                            <div id="table-scroll">
+                                <table class="display table table-bordered table-striped">
+                                    <tbody>
+                                        {% for report in report1 %}
+                                        <tr>
+                                            <td>
+                                                <div>
+                                                    <a href="{% url 'core:substep_report_detail' report.pk %}" style="color:black;"><strong>{{ report.comment }}</strong></a>
+                                                </div>
+                                                 {% if report.photo %}
+                                                <div id="photo" class="photo-item">
+                                                    <img src="{{report.photo.url}}" style="height: 80px;float: right;padding: 0px;margin-right: 111px;">
+                                                </div>
+                                                {% endif %}<br>
+                                                {% if report.comment %}
+                                                    <div class="site_icon_float" style="">Comment: {{ report.comment }}</div><br>
+                                                {% endif %}
+                                                {% if report.user %}
+                                                    <a href="#" title="View details of user">
+                                                        <small><i class="la la-user" style="color:grey;">Sent by: {{ report.user }}</i></small>
+                                                    </a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                                                {% endif %}
+                                                {% if report.date %}
+                                                    <small><i class="site_icon_float" style="color:grey;"><i class="la la-clock-o"
+                                                                                                                     aria-hidden="true"></i>{{ report.date }}</i></small>
+                                                    <!--<label>Photo:</label>-->
+                                                {% endif %}&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                                            </td>
+                                        </tr>
+                                        {% endfor %}
+                                    </tbody>
+                                </table>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+       </div>
+
+
+
+
+              <div class="formHolder">
+            <div class="widget-info margin-top-large">
+                <div class="widget-head">
+                    <div class="widget-body mt-2 horizontalForm">
+                        <div class="widget-head">
+                            <h4><a href="#" title="">Report List 2</a></h4>
+                            <span class="tools pull-right"><a href="{% url 'core:export_report' %}"><button>Export Excel</button></a></span>
+                            <span class="tools pull-right"><a href="{% url 'core:export_report_pdf' %}"><button>Export Pdf </button></a></span>
+                            <p style="text-align:center">Category: Questions/Inquiries</p>
+                        </div>
+                        <div id="table-wrapper">
+                            <div id="table-scroll">
+                                <table class="display table table-bordered table-striped">
+                                    <tbody>
+                                        {% for report in report2 %}
+                                        <tr>
+                                            <td>
+                                                <div>
+                                                    <a href="{% url 'core:substep_report_detail' report.pk %}" style="color:black;"><strong>{{ report.comment }}</strong></a>
+                                                </div>
+                                                 {% if report.photo %}
+                                                <div id="photo" class="photo-item">
+                                                    <img src="{{report.photo.url}}" style="height: 80px;float: right;padding: 0px;margin-right: 111px;">
+                                                </div>
+                                                {% endif %}<br>
+                                                {% if report.comment %}
+                                                    <div class="site_icon_float" style="">Comment: {{ report.comment }}</div><br>
+                                                {% endif %}
+                                                {% if report.user %}
+                                                    <a href="#" title="View details of user">
+                                                        <small><i class="la la-user" style="color:grey;">Sent by: {{ report.user }}</i></small>
+                                                    </a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                                                {% endif %}
+                                                {% if report.date %}
+                                                    <small><i class="site_icon_float" style="color:grey;"><i class="la la-clock-o"
+                                                                                                                     aria-hidden="true"></i>{{ report.date }}</i></small>
+                                                    <!--<label>Photo:</label>-->
+                                                {% endif %}&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                                            </td>
+                                        </tr>
+                                        {% endfor %}
+                                    </tbody>
+                                </table>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+       </div>
+
+
+
+
+
+
+
      </div>
 <div class="modal fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" id="myModalLabel"
      aria-hidden="true">
