--- a/survey/core/templates/core/substepreport_list.html
+++ b/survey/core/templates/core/substepreport_list.html
@@ -102,9 +102,12 @@
                                                     <img src="{{report.photo.url}}" style="height: 80px;float: right;padding: 0px;margin-right: 111px;">
                                                 </div>
                                                 {% endif %}<br>
-                                                {% if report.comment %}
-                                                    <div class="site_icon_float" style="">Comment: {{ report.comment }}</div><br>
+                                                {% if report.step %}
+                                                    <a class="site_icon_float" style="">Step: {{ report.step }}</a><br>
                                                 {% endif %}
+                                                {% if report.substep %}
+                                                    <a class="site_icon_float" style="">Substep: {{ report.substep }}</a><br>
+                                                {% endif %}<br><br>
                                                 {% if report.user %}
                                                     <a href="#" title="View details of user">
                                                         <small><i class="la la-user" style="color:grey;">Sent by: {{ report.user }}</i></small>
@@ -136,7 +139,7 @@
                 <div class="widget-head">
                     <div class="widget-body mt-2 horizontalForm">
                         <div class="widget-head">
-                            <h4><a href="#" title="">Report List 1</a></h4>
+                            <h4><a href="#" title="">Report List </a></h4>
                             <span class="tools pull-right"><a href="{% url 'core:export_report' %}"><button>Export Excel</button></a></span>
                             <span class="tools pull-right"><a href="{% url 'core:export_report_pdf' %}"><button>Export Pdf </button></a></span>
                             <p style="text-align:center">Category: Issues/Concerns</p>
@@ -156,9 +159,12 @@
                                                     <img src="{{report.photo.url}}" style="height: 80px;float: right;padding: 0px;margin-right: 111px;">
                                                 </div>
                                                 {% endif %}<br>
-                                                {% if report.comment %}
-                                                    <div class="site_icon_float" style="">Comment: {{ report.comment }}</div><br>
+                                                {% if report.step %}
+                                                    <a class="site_icon_float" style="">Step: {{ report.step }}</a><br>
                                                 {% endif %}
+                                                {% if report.substep %}
+                                                    <a class="site_icon_float" style="">Substep: {{ report.substep }}</a><br>
+                                                {% endif %}<br><br>
                                                 {% if report.user %}
                                                     <a href="#" title="View details of user">
                                                         <small><i class="la la-user" style="color:grey;">Sent by: {{ report.user }}</i></small>
@@ -189,7 +195,7 @@
                 <div class="widget-head">
                     <div class="widget-body mt-2 horizontalForm">
                         <div class="widget-head">
-                            <h4><a href="#" title="">Report List 2</a></h4>
+                            <h4><a href="#" title="">Report List </a></h4>
                             <span class="tools pull-right"><a href="{% url 'core:export_report' %}"><button>Export Excel</button></a></span>
                             <span class="tools pull-right"><a href="{% url 'core:export_report_pdf' %}"><button>Export Pdf </button></a></span>
                             <p style="text-align:center">Category: Questions/Inquiries</p>
@@ -209,9 +215,12 @@
                                                     <img src="{{report.photo.url}}" style="height: 80px;float: right;padding: 0px;margin-right: 111px;">
                                                 </div>
                                                 {% endif %}<br>
-                                                {% if report.comment %}
-                                                    <div class="site_icon_float" style="">Comment: {{ report.comment }}</div><br>
+                                                {% if report.step %}
+                                                    <a class="site_icon_float" style="">Step: {{ report.step }}</a><br>
                                                 {% endif %}
+                                                {% if report.substep %}
+                                                    <a class="site_icon_float" style="">Substep: {{ report.substep }}</a><br>
+                                                {% endif %}<br><br>
                                                 {% if report.user %}
                                                     <a href="#" title="View details of user">
                                                         <small><i class="la la-user" style="color:grey;">Sent by: {{ report.user }}</i></small>
