--- a/survey/core/templates/core/substepreport_list.html
+++ b/survey/core/templates/core/substepreport_list.html
@@ -123,12 +123,12 @@
                                                     {% endif %}
                                                 </div>
                                                 {% endif %}
-
+<!-- 
                                                  {% if report.photo %}
                                                 <div id="photo" class="photo-item">
                                                     <img src="{{report.photo.url}}" style="height: 80px;float: right;padding: 0px;margin-right: 111px;">
                                                 </div>
-                                                {% endif %}<br>
+                                                {% endif %}<br> -->
                                                 {% if report.step %}
                                                     <a class="site_icon_float" style="">Step: {{ report.step }}</a><br>
                                                 {% endif %}
@@ -194,11 +194,11 @@
                                                 </div>
                                                 {% endif %}
 
-                                                 {% if report.photo %}
+ <!--                                                 {% if report.photo %}
                                                 <div id="photo" class="photo-item">
                                                     <img src="{{report.photo.url}}" style="height: 80px;float: right;padding: 0px;margin-right: 111px;">
                                                 </div>
-                                                {% endif %}<br>
+                                                {% endif %}<br> -->
                                                 {% if report.step %}
                                                     <a class="site_icon_float" style="">Step: {{ report.step }}</a><br>
                                                 {% endif %}
@@ -262,12 +262,12 @@
                                                     {% endif %}
                                                 </div>
                                                 {% endif %}
-
+<!-- 
                                                  {% if report.photo %}
                                                 <div id="photo" class="photo-item">
                                                     <img src="{{report.photo.url}}" style="height: 80px;float: right;padding: 0px;margin-right: 111px;">
                                                 </div>
-                                                {% endif %}<br>
+                                                {% endif %}<br> -->
                                                 {% if report.step %}
                                                     <a class="site_icon_float" style="">Step: {{ report.step }}</a><br>
                                                 {% endif %}
