verify api created and community member users managed

--- a/survey/core/templates/core/dashboard.html
+++ b/survey/core/templates/core/dashboard.html
@@ -81,6 +81,10 @@
 
 
                                 </div>
+                                <br>
+                                <div class="widget-head">
+                                    <h4><mark><a href="{% url 'core:community_member' %}">Manage Community Member</a></mark></h4>
+                                </div>
                             </div>
                         </div>
 
